[package]
name = "dbxmirror"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
clap-wrapper = { git = "https://github.com/wfraser/clap_wrapper.git" }
console = "0.15.8"
crossbeam-channel = "0.5.13"
dbxcase = { git = "https://github.com/wfraser/dbxcase.git" }
dropbox-sdk = { version = "*", default-features = false }
dropbox-toolbox = { git = "https://github.com/wfraser/dropbox-toolbox.git", version = "0.1.0" }
hashbrown = "0.14.5"
indicatif = { version = "0.17.8", features = ["in_memory"] }
log = "0.4.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }
scopeguard = "1.2.0"
time = { version = "0.3.36", features = ["parsing"] }

[patch.crates-io]
dropbox-sdk = { git = "https://github.com/wfraser/dropbox-sdk-rust.git" }
