[package]
name = "dbxmirror"
version = "0.2.7"
edition = "2021"
authors = ["Bill Fraser <bill@wfraser.dev>"]
description = "Mirror a Dropbox directory tree efficiently"
keywords = ["dropbox"]
repository = "https://github.com/wfraser/dbxmirror"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
clap-wrapper = { git = "https://github.com/wfraser/clap_wrapper.git" }
console = "0.15.8"
crossbeam-channel = "0.5.13"
dbxcase = "1.0.0"
dropbox-content-hasher = "0.3"
dropbox-sdk = { version = "0.19.0-beta1", default-features = false, features = ["dbx_files", "default_client"] }
hashbrown = "0.15.0"
indicatif = { version = "0.17.8", features = ["in_memory"] }
log = "0.4.21"
rusqlite = { version = "0.32.0", features = ["bundled"] }
scopeguard = "1.2.0"
time = { version = "0.3.36", features = ["parsing"] }
